--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+
+    <!-- Live Chat Widget powered by https://keyreply.com/chat/ -->
+    <!-- Advanced options: -->
+    <!-- data-align="left" -->
+    <!-- data-overlay="true" -->
+    <script data-align="right" data-overlay="false" id="keyreply-script" src="//keyreply.com/chat/widget.js" data-color="#f44336" data-apps="JTdCJTIybGluZSUyMjolMjJodHRwczovL2xpbmUubWUvdGkvcC9PbnJEbzlQaERQJTIyJTdE"></script>
   </body>
 </html>
