add meta description

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="description" content="YIFANG LO WEB DESIGNER CONTACTS bellalo7755@gmail.com github.com/bellalo12 +886-905-721-545 SKILLS JAVASCRIPT HTML5 CSS3 AGILE">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
